k8s/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: booking
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
      protocol: TCP
    - name: console
      port: 9001
      targetPort: console
      protocol: TCP
